# landauer

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: bit.rs  carnot.rs  landauer.rs  lib.rs  memory.rs  reversible.rs  thermodynamics.rs
